change:navigation style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,20 @@
         padding-left: theme("padding.20");
         padding-right: theme("padding.20");
     }
+
+    .nav-clamp {
+        font-size: clamp(1.25rem, 2rem + 5vw, 4.5rem);
+        line-height: 1;
+    }
+}
+
+:root {
+    --custom-gray: #eeede9;
+    --custom-dark-gray: #e5e3db;
+    --custom-orange: #fe5c3c;
+    --custom-blue: #005fcc;
+    --custom-purple: #9657eb;
+    --custom-yellow: #f0b845;
 }
 
 body {
