feat: add content swicher in designer page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,26 @@
         font-size: clamp(1.25rem, 2rem + 2vw + 2vh, 4.25rem);
         line-height: 1;
     }
+
+    .animated-underline::before {
+        content: "";
+        position: absolute;
+        bottom: -0.2rem;
+        right: 0;
+        left: 0;
+        height: 0.05rem;
+        min-height: 1px;
+        background-color: black;
+        transition: transform 0.55s cubic-bezier(0.075, 0.82, 0.165, 1);
+        transform-origin: right;
+        transform: scaleX(0);
+    }
+
+    .animated-underline:hover::before,
+    .animated-underline.is-active::before {
+        transform-origin: left;
+        transform: scaleX(1);
+    }
 }
 
 body {
